[tool.poetry]
name = "rl-tic-tac-toe"
version = "0.1.0"
description = ""
authors = ["thomaszub <thomas.zub@outlook.de>"]

[tool.poetry.dependencies]
python = "~3.9"
numpy = "~1.21.4"
keras = "~2.7.0"
tensorflow = "~2.7.0"

[tool.poetry.dev-dependencies]
black = "21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
